<resources>
    <string name="app_name">Brachless Banking</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="or">OR</string>
    <string name="qr_hint">Send via QR code</string>
    <string name="send">send</string>
    <string name="registration_title">Registration Form</string>
    <string name="registration_subtitle">Blockchain technologies for business</string>
    <string name="button_register">Register</string>
    <string name="error_dialog_title">Failure</string>
    <string name="username_empty_error_dialog_message">Account ID can\'t be empty</string>
    <string name="username_already_exists_error_dialog_message">Account ID already exists</string>
    <string name="username_doesnt_exists">No such Account ID</string>
    <string name="fields_cant_be_empty">Fields can not be empty</string>
    <string name="server_is_not_reachable">Server is not reachable</string>
    <string name="please_wait">Please, wait…</string>
    <string name="general_error">Problem with connection to server</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Are you sure? Account will be lost</string>
    <string name="account_details">Account details</string>
    <string name="account_details_error">Failed to set account details</string>
    <string name="not_enough_balance_error">Not enough amount on balance</string>
    <string name="bio">Any details such as age, profession.</string>
    <string name="transaction_successful">Transaction successful.</string>
    <string name="qr_decode_successful">QR decode successful.</string>
    <string name="info">Info</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="password_login">Password Login</string>
    <string name="registration_question">Do not have Account ID ?</string>
    <string name="biometric_dialog">Please put your finger on the fingerprint scanner</string>
    <string name="username_hint">Account ID</string>
    <string name="password_hint">Password (Private Key)</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="fullname_hint">Full Name</string>
    <string name="birthdate_hint">Birth Date</string>
    <string name="nationality_hint">Nationality</string>
    <string name="national_id_hint">National ID Number</string>
</resources>