<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center" />

        <androidx.cardview.widget.CardView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/biometric_icon"
                    android:src="@drawable/ic_fingerprint"
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"/>

                <ImageView
                    android:id="@+id/password_icon"
                    android:src="@drawable/ic_textbox_password"
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"/>

                <Button
                    android:id="@+id/biometric_button"
                    android:text="@string/biometric_login"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/biometric_icon"/>

                <TextView
                    android:id="@+id/or_text"
                    android:text="@string/or"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_toEndOf="@id/biometric_button"
                    android:layout_toStartOf="@id/password_button" />

                <Button
                    android:id="@+id/password_button"
                    android:text="@string/password_login"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/password_icon"/>

                <TextView
                    android:id="@+id/register_text"
                    android:text="@string/registration_question"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/biometric_button"
                    />

                <Button
                    android:id="@+id/register_button"
                    android:text="@string/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/register_text"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>